packages/libbird/cpp/engine.h

typedef _Bool bool;
typedef void (*FrameCallback)(void *);
typedef void (*ResizeCallback)();
typedef struct {
  int fd;
  int width;
  int height;
  int pitch;
  uint32_t drm_format;
  uint64_t modifier;
  bool premultiplied;
  uint64_t generation;
} LadybirdLinuxDmaBufFrame;
typedef void (*UrlChangeCallback)(const char *);
typedef void (*TitleChangeCallback)(const char *);
typedef void (*FaviconChangeCallback)(const uint8_t *, int, int);
typedef void (*CrossSiteNavigationCallback)(int view_id);
typedef void (*LoadingStateChangeCallback)(bool is_loading);
LADYBIRD_API bool can_go_back(int view_id);
LADYBIRD_API bool can_go_forward(int view_id);
LADYBIRD_API void dispatch_mouse_event(int view_id, int type, int x, int y,
                                       int button, int buttons, int modifiers,
                                       double wheel_delta_x,
                                       double wheel_delta_y);
LADYBIRD_API void dispatch_key_event(int view_id, int type, int keycode,
                                     int modifiers, uint32_t code_point,
                                     bool repeat);
typedef char *(*AskUserForDownloadPathCallback)(const char *suggestion);
typedef void (*DisplayDownloadConfirmationDialogCallback)(
    const char *suggestion, const char *path);
typedef void (*DisplayErrorDialogCallback)(const char *message);
LADYBIRD_API void set_ask_user_for_download_path_callback(
    AskUserForDownloadPathCallback callback);
LADYBIRD_API void set_display_download_confirmation_dialog_callback(
    DisplayDownloadConfirmationDialogCallback callback);
LADYBIRD_API void
set_display_error_dialog_callback(DisplayErrorDialogCallback callback);