packages/libbird/lib/src/generated/engine_bindings.g.dart


  late final _can_go_backPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int)>>('can_go_back');
  late final _can_go_back = _can_go_backPtr.asFunction<bool Function(int)>();

  bool can_go_forward(int view_id) {
    return _can_go_forward(view_id);
  }

  late final _can_go_forwardPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int)>>('can_go_forward');
  late final _can_go_forward = _can_go_forwardPtr
      .asFunction<bool Function(int)>();

  void dispatch_mouse_event(
    int view_id,
    int type,
    int x,
    int y,
    int button,
    int buttons,
    int modifiers,
    double wheel_delta_x,
    double wheel_delta_y,
  ) {
    return _dispatch_mouse_event(
      view_id,
      type,
      x,
      y,
      button,
      buttons,
      modifiers,
      wheel_delta_x,
      wheel_delta_y,
    );
  }

  late final _dispatch_mouse_eventPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Double,
            ffi.Double,
          )
        >
      >('dispatch_mouse_event');
  late final _dispatch_mouse_event = _dispatch_mouse_eventPtr
      .asFunction<
        void Function(int, int, int, int, int, int, int, double, double)
      >();

  void dispatch_key_event(
    int view_id,
    int type,
    int keycode,
    int modifiers,
    int code_point,
    bool repeat,
  ) {
    return _dispatch_key_event(
      view_id,
      type,
      keycode,
      modifiers,
      code_point,
      repeat,
    );
  }

  late final _dispatch_key_eventPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Uint32,
            ffi.Bool,
          )
        >
      >('dispatch_key_event');
  late final _dispatch_key_event = _dispatch_key_eventPtr
      .asFunction<void Function(int, int, int, int, int, bool)>();

  void set_ask_user_for_download_path_callback(
    AskUserForDownloadPathCallback callback,
  ) {
    return _set_ask_user_for_download_path_callback(callback);
  }

  late final _set_ask_user_for_download_path_callbackPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(AskUserForDownloadPathCallback)>
      >('set_ask_user_for_download_path_callback');
  late final _set_ask_user_for_download_path_callback =
      _set_ask_user_for_download_path_callbackPtr
          .asFunction<void Function(AskUserForDownloadPathCallback)>();

  void set_display_download_confirmation_dialog_callback(
    DisplayDownloadConfirmationDialogCallback callback,
  ) {
    return _set_display_download_confirmation_dialog_callback(callback);
  }

  late final _set_display_download_confirmation_dialog_callbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(DisplayDownloadConfirmationDialogCallback)
        >
      >('set_display_download_confirmation_dialog_callback');
  late final _set_display_download_confirmation_dialog_callback =
      _set_display_download_confirmation_dialog_callbackPtr
          .asFunction<
            void Function(DisplayDownloadConfirmationDialogCallback)
          >();

  void set_display_error_dialog_callback(DisplayErrorDialogCallback callback) {
    return _set_display_error_dialog_callback(callback);
  }

  late final _set_display_error_dialog_callbackPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(DisplayErrorDialogCallback)>
      >('set_display_error_dialog_callback');
  late final _set_display_error_dialog_callback =
      _set_display_error_dialog_callbackPtr
          .asFunction<void Function(DisplayErrorDialogCallback)>();
}

final class __fsid_t extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Int> __val;
}

final class LadybirdLinuxDmaBufFrame extends ffi.Struct {
  @ffi.Int()
  external int fd;

  @ffi.Int()
  external int width;

  @ffi.Int()
  external int height;

  @ffi.Int()
  external int pitch;

  @ffi.Uint32()
  external int drm_format;

  @ffi.Uint64()
  external int modifier;

  @ffi.Bool()
  external bool premultiplied;

  @ffi.Uint64()
  external int generation;
}

typedef FrameCallback = ffi.Pointer<ffi.NativeFunction<FrameCallbackFunction>>;
typedef FrameCallbackFunction = ffi.Void Function(ffi.Pointer<ffi.Void>);
typedef DartFrameCallbackFunction = void Function(ffi.Pointer<ffi.Void>);
typedef ResizeCallback =
    ffi.Pointer<ffi.NativeFunction<ResizeCallbackFunction>>;
typedef ResizeCallbackFunction = ffi.Void Function();
typedef DartResizeCallbackFunction = void Function();
typedef UrlChangeCallback =
    ffi.Pointer<ffi.NativeFunction<UrlChangeCallbackFunction>>;
typedef UrlChangeCallbackFunction = ffi.Void Function(ffi.Pointer<ffi.Char>);
typedef DartUrlChangeCallbackFunction = void Function(ffi.Pointer<ffi.Char>);
typedef TitleChangeCallback =
    ffi.Pointer<ffi.NativeFunction<TitleChangeCallbackFunction>>;
typedef TitleChangeCallbackFunction = ffi.Void Function(ffi.Pointer<ffi.Char>);
typedef DartTitleChangeCallbackFunction = void Function(ffi.Pointer<ffi.Char>);
typedef FaviconChangeCallback =
    ffi.Pointer<ffi.NativeFunction<FaviconChangeCallbackFunction>>;
typedef FaviconChangeCallbackFunction =
    ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.Int, ffi.Int);
typedef DartFaviconChangeCallbackFunction =
    void Function(ffi.Pointer<ffi.Uint8>, int, int);
typedef CrossSiteNavigationCallback =
    ffi.Pointer<ffi.NativeFunction<CrossSiteNavigationCallbackFunction>>;
typedef CrossSiteNavigationCallbackFunction =
    ffi.Void Function(ffi.Int view_id);
typedef DartCrossSiteNavigationCallbackFunction = void Function(int view_id);
typedef LoadingStateChangeCallback =
    ffi.Pointer<ffi.NativeFunction<LoadingStateChangeCallbackFunction>>;
typedef LoadingStateChangeCallbackFunction =
    ffi.Void Function(ffi.Bool is_loading);
typedef DartLoadingStateChangeCallbackFunction = void Function(bool is_loading);
typedef AskUserForDownloadPathCallback =
    ffi.Pointer<ffi.NativeFunction<AskUserForDownloadPathCallbackFunction>>;
typedef AskUserForDownloadPathCallbackFunction =
    ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char> suggestion);
typedef DisplayDownloadConfirmationDialogCallback =
    ffi.Pointer<
      ffi.NativeFunction<DisplayDownloadConfirmationDialogCallbackFunction>
    >;
typedef DisplayDownloadConfirmationDialogCallbackFunction =
    ffi.Void Function(
      ffi.Pointer<ffi.Char> suggestion,
      ffi.Pointer<ffi.Char> path,
    );
typedef DartDisplayDownloadConfirmationDialogCallbackFunction =
    void Function(ffi.Pointer<ffi.Char> suggestion, ffi.Pointer<ffi.Char> path);
typedef DisplayErrorDialogCallback =
    ffi.Pointer<ffi.NativeFunction<DisplayErrorDialogCallbackFunction>>;
typedef DisplayErrorDialogCallbackFunction =
    ffi.Void Function(ffi.Pointer<ffi.Char> message);
typedef DartDisplayErrorDialogCallbackFunction =
    void Function(ffi.Pointer<ffi.Char> message);

const int _STDINT_H = 1;

const int _FEATURES_H = 1;

const int _DEFAULT_SOURCE = 1;

const int __GLIBC_USE_ISOC2Y = 1;

const int __GLIBC_USE_ISOC23 = 1;

const int __USE_ISOC11 = 1;

const int __USE_ISOC99 = 1;

const int __USE_ISOC95 = 1;

const int _POSIX_SOURCE = 1;

const int _POSIX_C_SOURCE = 202405;

const int __USE_POSIX = 1;

const int __USE_POSIX2 = 1;

const int __USE_POSIX199309 = 1;

const int __USE_POSIX199506 = 1;

const int __USE_XOPEN2K = 1;

const int __USE_XOPEN2K8 = 1;

const int _ATFILE_SOURCE = 1;

const int __USE_XOPEN2K24 = 1;

const int __WORDSIZE = 64;

const int __WORDSIZE_TIME64_COMPAT32 = 1;

const int __SYSCALL_WORDSIZE = 64;

const int __TIMESIZE = 64;

const int __USE_TIME_BITS64 = 1;

const int __USE_MISC = 1;

const int __USE_ATFILE = 1;

const int __USE_FORTIFY_LEVEL = 0;

const int __GLIBC_USE_DEPRECATED_GETS = 0;

const int __GLIBC_USE_DEPRECATED_SCANF = 0;

const int __GLIBC_USE_C23_STRTOL = 1;

const int _STDC_PREDEF_H = 1;

const int __STDC_IEC_559__ = 1;

const int __STDC_IEC_60559_BFP__ = 201404;

const int __STDC_IEC_559_COMPLEX__ = 1;

const int __STDC_IEC_60559_COMPLEX__ = 201404;

const int __STDC_ISO_10646__ = 201706;

const int __GNU_LIBRARY__ = 6;

const int __GLIBC__ = 2;

const int __GLIBC_MINOR__ = 43;

const int _SYS_CDEFS_H = 1;

const int __THROW = 1;

const int __THROWNL = 1;

const int __glibc_c99_flexarr_available = 1;

const int __LDOUBLE_REDIRECTS_TO_FLOAT128_ABI = 0;

const int __HAVE_GENERIC_SELECTION = 0;

const int __GLIBC_USE_LIB_EXT2 = 1;

const int __GLIBC_USE_IEC_60559_BFP_EXT = 1;

const int __GLIBC_USE_IEC_60559_BFP_EXT_C23 = 1;

const int __GLIBC_USE_IEC_60559_EXT = 1;

const int __GLIBC_USE_IEC_60559_FUNCS_EXT = 1;

const int __GLIBC_USE_IEC_60559_FUNCS_EXT_C23 = 1;

const int __GLIBC_USE_IEC_60559_TYPES_EXT = 1;

const int _BITS_TYPES_H = 1;

const int _BITS_TYPESIZES_H = 1;

const int __OFF_T_MATCHES_OFF64_T = 1;

const int __INO_T_MATCHES_INO64_T = 1;

const int __RLIM_T_MATCHES_RLIM64_T = 1;

const int __STATFS_MATCHES_STATFS64 = 1;

const int __KERNEL_OLD_TIMEVAL_MATCHES_TIMEVAL64 = 1;

const int __FD_SETSIZE = 1024;

const int _BITS_TIME64_H = 1;

const int _BITS_WCHAR_H = 1;

const int __WCHAR_MAX = 2147483647;

const int __WCHAR_MIN = -2147483648;

const int _BITS_STDINT_INTN_H = 1;

const int _BITS_STDINT_UINTN_H = 1;

const int _BITS_STDINT_LEAST_H = 1;

const int INT8_MIN = -128;

const int INT16_MIN = -32768;

const int INT32_MIN = -2147483648;

const int INT64_MIN = -9223372036854775808;

const int INT8_MAX = 127;

const int INT16_MAX = 32767;

const int INT32_MAX = 2147483647;

const int INT64_MAX = 9223372036854775807;

const int UINT8_MAX = 255;

const int UINT16_MAX = 65535;

const int UINT32_MAX = 4294967295;

const int UINT64_MAX = -1;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST8_MAX = 127;

const int INT_LEAST16_MAX = 32767;

const int INT_LEAST32_MAX = 2147483647;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST8_MAX = 255;

const int UINT_LEAST16_MAX = 65535;

const int UINT_LEAST32_MAX = 4294967295;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST8_MIN = -128;

const int INT_FAST16_MIN = -9223372036854775808;

const int INT_FAST32_MIN = -9223372036854775808;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST8_MAX = 127;

const int INT_FAST16_MAX = 9223372036854775807;

const int INT_FAST32_MAX = 9223372036854775807;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST8_MAX = 255;

const int UINT_FAST16_MAX = -1;

const int UINT_FAST32_MAX = -1;

const int UINT_FAST64_MAX = -1;

const int INTPTR_MIN = -9223372036854775808;

const int INTPTR_MAX = 9223372036854775807;

const int UINTPTR_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int SIZE_MAX = -1;

const int WCHAR_MIN = -2147483648;

const int WCHAR_MAX = 2147483647;

const int WINT_MIN = 0;

const int WINT_MAX = 4294967295;

const int true1 = 1;

const int false1 = 0;
